# openpretext

./: .gitignore  AGENT_PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROGRESS.md  README.md  TASKS.md  index.html  original-converstaion.md  package-lock.json  package.json  playwright.config.ts  playwright.smoke.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bench/: REPORT.md  baselines.json  cli.ts  curate.ts  diagnose-autocut.ts  extract-lesson-ground-truth.ts  ground-truth.ts  loader.ts  regression.ts  runner.ts  sweep.ts  tsconfig.bench.json
bench/acquire/: cli.ts  discover-tol.ts  discover.ts  download.ts  manifest.ts  s3.ts
bench/metrics/: autocut-metrics.ts  autosort-metrics.ts  chromosome-metrics.ts  summary.ts
bench/output/: json-writer.ts  table-formatter.ts
data/: pattern-gallery.json  prompt-strategies.json  specimen-catalog.json
docs/: PRETEXT_FORMAT.md  analysis-audit-2026-07-06.md
guide/: README.md  glossary.html  guide.css  guide.js  index.html  reading-the-analysis.html
manuscript/: manuscript.md  paper1-nar-platform.md  paper2-autosort-autocut.md  references-paper1.bib  references-paper2.bib  references.bib
scripts/: agent-loop.sh  parallel-agents.sh
server/: .gitignore  README.md  pyproject.toml
server/evo2hic_server/: __init__.py  dna_encoder.py  inference.py  main.py  schemas.py
server/hicfoundation_server/: __init__.py  inference.py  main.py  schemas.py
src/: main.ts
src/ai/: AIClient.ts  (+4 more)
(+334 files in other folders)
