[project]
name = "evo2hic-server"
version = "0.1.0"
description = "Hi-C contact map resolution enhancement server using Evo2HiC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "scipy>=1.12.0",
    "einops>=0.8.0",
    "beartype>=0.19.0",
]

[project.optional-dependencies]
gpu = [
    "accelerate>=1.0.0",
]

[project.scripts]
evo2hic-server = "evo2hic_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
