[project]
name = "evo2hic-server"
version = "0.1.0"
description = "Hi-C contact map resolution enhancement server using Evo2HiC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=1.26.0",
    "torch>=2.13.0",
    "scipy>=1.12.0",
    "einops>=0.8.0",
    "beartype>=0.19.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
gpu = [
    "accelerate>=1.0.0",
]

[project.scripts]
evo2hic-server = "evo2hic_server.main:run"
# HiCFoundation Hi-C-only backend (Phase 0 mock; shares deps with the above).
hicfoundation-server = "hicfoundation_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evo2hic_server", "hicfoundation_server"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.27.0",
]
